# SaaS

./: .env.example  .env.selfhost.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.selfhost.yml  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  db_types.py  deps.py  logging_config.py  main.py  security.py
backend/app/core/: errors.py  ids.py  pagination.py
backend/app/middleware/: request_id.py  tenant.py
backend/app/models/: __init__.py  ai_analysis.py  base.py  company.py  customer.py  inquiry.py  inquiry_image.py  membership.py  price_item.py  price_list.py  quote.py  quote_position.py  settings.py  user.py
backend/app/repositories/: base.py  company_repo.py  customer_repo.py  inquiry_repo.py  price_repo.py  quote_repo.py
backend/app/schemas/: __init__.py  ai.py  auth.py  common.py  company.py  customer.py  inquiry.py  price.py  quote.py
backend/app/services/: ai_service.py  auth_service.py  customer_service.py  inquiry_service.py  pdf_service.py  price_engine.py  quote_service.py  storage_service.py  tenant_service.py
backend/app/templates/: quote.html
backend/scripts/: export_openapi.py  scrape_bit_gmbh.py
backend/scripts/scraper/: README.md  __init__.py  crawler.py  extract.py
backend/tests/: conftest.py  test_inquiries.py  test_price_engine.py  test_scraper_extract.py  test_tenant_isolation.py
(+519 files in other folders)
