[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handwerk-backend"
version = "0.1.0"
description = "Multi-tenant SaaS backend for German craftsman businesses"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Handwerk SaaS" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "pyjwt[crypto]>=2.9.0",
    "httpx>=0.27.0",
    "openai>=1.51.0",
    "weasyprint>=63.0",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E", "F", "I", "N"]
"tests/*.py" = ["B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
